--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
 
     <main>
         <h1 class="title"><span>Aqui</span> vc<br>é a <span>moda</span></h1>
-        <h2 class="subtitle">Seja quem vc sempre sonhou. Aqui vc é um só com a moda. Encontre tudo que fará vc brilhar</h2>
+        <h2 class="subtitle">Seja quem vc sempre sonhou. Torne-se um só com a moda. Encontre tudo que fará vc brilhar</h2>
         <section class="hero">
-            <!-- <div class="div-img">
+            <div class="img-container">
                 <img src="images/hero-img.png" alt="imagem propaganda" class="hero-img">
-                <div class="style-img"></div>
-            </div> -->
+            </div>
         </section>
     </main>
     
