home page - customizations

--- a/index.html
+++ b/index.html
@@ -39,12 +39,31 @@
     </header>
 
     <main>
+        <div class="circle"></div>
         <h1 class="title"><span>Aqui</span> vc<br>é a <span>moda</span></h1>
-        <h2 class="subtitle">Seja quem vc sempre sonhou. Torne-se um só com a moda. Encontre tudo que fará vc brilhar</h2>
+        <h2 class="subtitle">Seja quem vc sempre sonhou. Torne-se um só<br>
+            com a moda. Encontre tudo que fará vc brilhar. <br> Estamos te esperando</h2>
+
+        <a href="#" class="btn-call">SAIBA MAIS</a>
+
         <section class="hero">
+            
+            <div class="circle-img">
+                <img src="images/circle.png" alt="">
+            </div>
             <div class="img-container">
                 <img src="images/hero-img.png" alt="imagem propaganda" class="hero-img">
             </div>
+
+            <h2 class="hero-title">
+                Realize 
+                <span>Hoje</span>,
+                Fale
+                <span>conosco</span>
+            </h2>
+
+            <a href="#" target="_blank" rel="noopener noreferrer" class="btn-call"><i class="bi bi-whatsapp"></i> <span>Fale conosco</span></a>
+
         </section>
     </main>
     
