--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </nav>
     </header>
 
+    <div class="circle-img">
+        <img src="images/circle.png" alt="">
+    </div>
+
     <main>
         <div class="circle"></div>
         <h1 class="title"><span>Aqui</span> vc<br>é a <span>moda</span></h1>
@@ -47,26 +51,26 @@
         <a href="#" class="btn-call">SAIBA MAIS</a>
 
         <section class="hero">
-            
-            <div class="circle-img">
-                <img src="images/circle.png" alt="">
-            </div>
             <div class="img-container">
                 <img src="images/hero-img.png" alt="imagem propaganda" class="hero-img">
             </div>
 
             <h2 class="hero-title">
-                Realize 
+                Realize
                 <span>Hoje</span>,
                 Fale
                 <span>conosco</span>
             </h2>
 
-            <a href="#" target="_blank" rel="noopener noreferrer" class="btn-call"><i class="bi bi-whatsapp"></i> <span>Fale conosco</span></a>
+            <a href="#" target="_blank" rel="noopener noreferrer" class="btn-call"><i class="bi bi-whatsapp">
+                </i> <span>Fale
+                    conosco</span>
+            </a>
 
         </section>
     </main>
-    
+
 </body>
 <script src="script.js"></script>
+
 </html>
