--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <main>
         <div class="circle"></div>
         <h1 class="title"><span>Aqui</span> vc<br>é a <span>moda</span></h1>
-        <h2 class="subtitle">Seja quem vc sempre sonhou. Torne-se um só<br>
+        
+        <h2 class="subtitle">Seja quem você sempre sonhou. Torne-se um só<br>
             com a moda. Encontre tudo que fará vc brilhar. <br> Estamos te esperando</h2>
 
         <a href="#" class="btn-call">SAIBA MAIS</a>
